[gd_scene load_steps=3 format=3 uid="uid://c6wwrdvtn6qql"]

[ext_resource type="Script" path="res://game/menu/main_menu.gd" id="1_15j84"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_t5wkg"]
color = Color(1, 1, 1, 1)
thickness = 10

[node name="MainMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_15j84")

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Logo" type="Label" parent="Menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 172
text = "Free Ballz"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Menu"]
layout_mode = 2
theme_override_constants/separation = 100
theme_override_styles/separator = SubResource("StyleBoxLine_t5wkg")

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CenterContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Continue"

[node name="NewGameButton" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "New Game"

[node name="OptionButton" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Options"

[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
